--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .container-titulo p {
     font-weight: 700;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 
 .container-input {
@@ -52,6 +52,7 @@ input {
    border: none;
    border: 2px solid gray;
    cursor: pointer;
+   padding-left: 5px;
 }
 
 
